Revision history for DBIx::Class

0.06003
        - added memory cycle tests and a long-needed weaken call

0.06002 2006-04-20 00:42:41
        - fix set_from_related to accept undef
        - fix to Dumper-induced hash iteration bug
        - fix to copy() with non-composed resultsource
        - fix to ->search without args to clone rs but maintain cache
        - grab $self->dbh once per function in Storage::DBI
        - nuke ResultSource caching of ->resultset for consistency reasons
        - fix for -and conditions when updating or deleting on a ResultSet

0.06001 2006-04-08 21:48:43
        - minor fix to update in case of undefined rels
        - fixes for cascade delete
        - substantial improvements and fixes to deploy
        - Added fix for quoting with single table
        - Substantial fixes and improvements to deploy
        - slice now uses search directly
        - fixes for update() on resultset
        - bugfix to Cursor to avoid error during DESTROY
        - transaction DBI operations now in debug trace output

0.06000 2006-03-25 18:03:46
        - Lots of documentation improvements
        - Minor tweak to related_resultset to prevent it storing a searched rs
        - Fixup to columns_info_for when database returns type(size)
        - Made do_txn respect void context (on the off-chance somebody cares)
        - Fix exception text for nonexistent key in ResultSet::find()

0.05999_04 2006-03-18 19:20:49
        - Fix for delete on full-table resultsets
        - Removed caching on count() and added _count for pager()
        - ->connection does nothing if ->storage defined and no args
          (and hence ->connect acts like ->clone under the same conditions)
        - Storage::DBI throws better exception if no connect info
        - columns_info_for made more robust / informative
        - ithreads compat added, fork compat improved
        - weaken result_source in all resultsets
	- Make pg seq extractor less sensitive.
